objects/Cloud_Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Access_Approval__c</fullName>
        <formula>IF( NOT(ISBLANK( Access_Instructions_Approval__c ) &amp;&amp; ISBLANK(EU_Access_Approval__c) &amp;&amp; ISBLANK(ST_Access_Approval__c)), true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Instructions_Approval__c</fullName>
        <label>Access Instructions &amp; Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 0 – Critical Account</fullName>
                </value>
                <value>
                    <fullName>Tier 1 – Strategic</fullName>
                </value>
                <value>
                    <fullName>Tier 2 – Named</fullName>
                </value>
                <value>
                    <fullName>Tier 3 – Commercial</fullName>
                </value>
                <value>
                    <fullName>Virtual Receptionist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Downstream Impact: CM and Cloud Billing
Department Owner: CM
Help Text: Used to reference the Account for this Cloud Deployment</description>
        <inlineHelpText>Used to reference the Account for this Cloud Deployment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Deployments (Account)</relationshipLabel>
        <relationshipName>Account_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiration__c</fullName>
        <label>TAM Engagement Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE_Tenant_Id_Hash__c</fullName>
        <formula>IF(!ISBLANK(Tenant_ID__c), &apos;BEEEC&apos; + &apos;#&apos; + Tenant_ID__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BE Tenant Id Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Platform_Id_Hash__c</fullName>
        <description>Single Hash to identify the Billing Rating Activity. Should eventually condense all of the lower hashes into their specific definitions to the referenced  _Hash_ fields can be deleted.</description>
        <formula>if (TEXT( Cloud_Platform__c ) == &apos;PureConnect Subscription&apos;, &apos;PCS#&apos; + Billing_Platform_Id__c, &apos;&apos;) + 
if (TEXT( Cloud_Platform__c ) == &apos;PureEngage Subscription&apos;, &apos;PES#&apos; + Billing_Platform_Id__c, &apos;&apos;) +

/* Future work to condense all previous hashes into one location */
/*
if (TEXT( Cloud_Platform__c ) == &apos;PureEngage Cloud&apos;, BE_Tenant_Id_Hash__c, &apos;&apos;) +
if (TEXT( Cloud_Platform__c ) == &apos;PureCloud&apos;, PureCloud_OrgID_Hash__c, &apos;&apos;) +
if (TEXT( Cloud_Platform__c ) == &apos;Premier Edition&apos;, PE_Subscriber_Id_Hash__c, &apos;&apos;) +
if (TEXT( Cloud_Platform__c ) == &apos;Outbound Engagement&apos;, Portico_Platform_Id_Hash__c, &apos;&apos;) +
if (TEXT( Cloud_Platform__c ) == &apos;PureConnect Cloud&apos;, PureConnect_ID_Hash__c, &apos;&apos;)
*/


/* This work will prioritize the use of the new field Billing_Platform_Id__c but for now default to the old User fields */
if (TEXT(Cloud_Platform__c)==&apos;PureEngage Cloud&apos;, IF(!ISBLANK(Billing_Platform_Id__c), &apos;BEEEC#&apos;+Billing_Platform_Id__c, IF(!ISBLANK(Tenant_ID__c), &apos;BEEEC#&apos;+Tenant_ID__c, &apos;&apos;)), &apos;&apos;) +
if (TEXT(Cloud_Platform__c)==&apos;PureCloud&apos;, IF(!ISBLANK(Billing_Platform_Id__c), &apos;PCL#&apos;+Billing_Platform_Id__c, IF(!ISBLANK(PureCloud_OrgID__c), &apos;PCL#&apos;+PureCloud_OrgID__c, &apos;&apos;)), &apos;&apos;) +
if (TEXT(Cloud_Platform__c)==&apos;Premier Edition&apos;, IF(!ISBLANK(Billing_Platform_Id__c), &apos;Angel#&apos;+Billing_Platform_Id__c, IF(!ISBLANK(PE_Subscription_ID__c), &apos;Angel#&apos;+PE_Subscription_ID__c, &apos;&apos;)), &apos;&apos;) +
if (TEXT(Cloud_Platform__c)==&apos;Outbound Engagement&apos;, IF(!ISBLANK(Billing_Platform_Id__c), &apos;Portico#&apos;+Billing_Platform_Id__c, IF(!ISBLANK(Portico_Platform_Id__c), &apos;Portico#&apos;+Portico_Platform_Id__c, &apos;&apos;)), &apos;&apos;) +
if (TEXT(Cloud_Platform__c)==&apos;PureConnect Cloud&apos;, IF(!ISBLANK(Billing_Platform_Id__c), &apos;PCC#&apos;+Billing_Platform_Id__c, IF(!ISBLANK(PureConnect_Id__c), &apos;PCC#&apos;+PureConnect_Id__c, &apos;&apos;)), &apos;&apos;)</formula>
        <label>Billing Platform Id Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Platform_Id__c</fullName>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCDB_Subscription_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCDB/Subscription ID</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Cloud Deployments</relationshipLabel>
        <relationshipName>Cloud_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Admin_Review__c</fullName>
        <description>For use by CC Data Admin team to validate accuracy of newly created Cloud Deployments. No dependencies, but all new Cloud Deployments will be defaulted to Pending; the team will have a list view to show all Pending CDs, and will be changing to Approved upon validation.</description>
        <inlineHelpText>For use by CC Data Admin team to validate newly created Cloud Deployments</inlineHelpText>
        <label>CC Admin Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSM_Account_Owner__c</fullName>
        <formula>Account__r.CSM_Account_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM Owner DO NOT USE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cloud_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cloud_Deployments_CSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaaS_ID_Hash__c</fullName>
        <formula>IF(!ISBLANK(CaaS_ID__c), &apos;CaaS#&apos; + CaaS_ID__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaaS ID Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaaS_ID__c</fullName>
        <description>If this Cloud Deployment is for Caas, enter the customer Id in this field</description>
        <inlineHelpText>If this Cloud Deployment is for Caas, enter the customer Id in this field</inlineHelpText>
        <label>CaaS ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Level__c</fullName>
        <label>Support Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Standard</fullName>
                </value>
                <value>
                    <fullName>PureConnect Standard</fullName>
                </value>
                <value>
                    <fullName>PureCloud Standard</fullName>
                </value>
                <value>
                    <fullName>PureCloud Bronze</fullName>
                </value>
                <value>
                    <fullName>PureCloud Silver</fullName>
                </value>
                <value>
                    <fullName>PureCloud Gold</fullName>
                </value>
                <value>
                    <fullName>PureConnect Legacy</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>PureSuccess PEngage</fullName>
                </value>
                <value>
                    <fullName>PureSuccess PConnect</fullName>
                </value>
                <value>
                    <fullName>Care for Cloud</fullName>
                </value>
                <value>
                    <fullName>Business Care for Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Alerts__c</fullName>
        <description>Used in the Alert field on Cloud Cases to inform users about a one-off process to be used for the given customer</description>
        <inlineHelpText>Used in the Alert field on Cloud Cases to inform users about a one-off process to be used for the given customer. Can be set by Salesforce Admins only.</inlineHelpText>
        <label>Case Alerts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vodafone IVR Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Billing_Contract_Add__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used by Cloud Billing UI to assign this cloud deployment to a Cloud Billing contract. Once Assigned it is saved as checked for reporting purposes</description>
        <label>Cloud Billing Contract Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Billing_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional lookup to the Cloud Billing Contract that will rate usage data for this deployment.</description>
        <inlineHelpText>Optional lookup to the Cloud Billing Contract that will rate usage data for this deployment.</inlineHelpText>
        <label>Cloud Billing Contract</label>
        <referenceTo>GCR_Content_Document_Detail__c</referenceTo>
        <relationshipLabel>Cloud Deployments</relationshipLabel>
        <relationshipName>Cloud_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Offering__c</fullName>
        <label>Cloud Offering OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business/Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Enterprise Edition-Echopass</fullName>
                </value>
                <value>
                    <fullName>Outbound Engagement</fullName>
                </value>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                    <label>PureConnect</label>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Social Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Platform__c</fullName>
        <label>Cloud Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>Outbound Engagement</fullName>
                </value>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>SpeechStorm</fullName>
                </value>
                <value>
                    <fullName>PureEngage Subscription</fullName>
                </value>
                <value>
                    <fullName>PureConnect Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Centers__c</fullName>
        <label>Data Centers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ap-southeast-1</fullName>
                </value>
                <value>
                    <fullName>ap-southeast-2</fullName>
                </value>
                <value>
                    <fullName>eu-west-1</fullName>
                </value>
                <value>
                    <fullName>eu-west-2</fullName>
                </value>
                <value>
                    <fullName>us-east-1</fullName>
                </value>
                <value>
                    <fullName>us-east-2</fullName>
                </value>
                <value>
                    <fullName>us-west-1</fullName>
                </value>
                <value>
                    <fullName>us-west-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>default deployment</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EP_Platform__c</fullName>
        <defaultValue>&quot;n/a&quot;</defaultValue>
        <inlineHelpText>Only applicable to former EchoPass deployments</inlineHelpText>
        <label>EP Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Access_Approval__c</fullName>
        <formula>Account__r.CC_Access_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Access Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Alias__c</fullName>
        <description>Cloud Deployment Autocreation.
this will hold emails ; separated</description>
        <label>Email Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gainsight_Relationship_Type__c</fullName>
        <label>Gainsight Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hash_Compare_ERIK__c</fullName>
        <formula>IF(NOT(ISBLANK(PE_Subscriber_Id_Hash__c)), IF(PE_Subscriber_Id_Hash__c== Billing_Platform_Id_Hash__c, &apos;GOOD&apos;, &apos;BAD&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hash Compare ERIK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Id_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Detail__c</fullName>
        <label>Offering Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner (PPU)</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Pilot/Trial/POC</fullName>
                </value>
                <value>
                    <fullName>Platform Migration</fullName>
                </value>
                <value>
                    <fullName>Offer Conversion</fullName>
                </value>
                <value>
                    <fullName>Migration &amp; Conversion</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Agreement (ELA)</fullName>
                </value>
                <value>
                    <fullName>Version Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <formula>Text(Opportunity__r.Lines_of_Businesses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cloud Deployment AutoCreation Requirement.
Lookup to opportunity, no need to place on Opp layout as related list</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cloud Deployments</relationshipLabel>
        <relationshipName>Cloud_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cloud Deployments</relationshipLabel>
        <relationshipName>Cloud_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <description>What it Does? Name populated by the end customer when signing up for a PureCloud Org. This is required when setting up a new org. This name is saved via PureCloud’s directory / configuration API and is not necessarily unique.
Downstream Impact? For quote totals 
Which department is owner? IT/PureCloud Team</description>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Short_Name__c</fullName>
        <description>What it Does? System generated unique name generated by the directory / configuration API when we create an org. This is required when setting up a new org. For example, the short name for the org “Nate Org 479” is “nateorg479”.
Downstream Impact? Effects reporting and billing integration 
Which department is owner? IT/PureCloud Team</description>
        <label>Org Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Subscriber_Id_Hash__c</fullName>
        <formula>IF(!ISBLANK(PE_Subscription_ID__c), &apos;Angel&apos; + &apos;#&apos; + PE_Subscription_ID__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PE Subscriber Id Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Subscription_ID__c</fullName>
        <label>PE Subscription ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Platform_URL__c</fullName>
        <label>Platform URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portico_Platform_Id_Hash__c</fullName>
        <formula>IF(!ISBLANK(Portico_Platform_Id__c), &apos;Portico&apos; + &apos;#&apos; + Portico_Platform_Id__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portico Platform Id Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portico_Platform_Id__c</fullName>
        <description>Optional Platform Id if the Cloud Deployment is for Portico</description>
        <inlineHelpText>Optional Platform Id if the Cloud Deployment is for Portico</inlineHelpText>
        <label>Portico Platform Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PureCloud_OrgID_Hash__c</fullName>
        <formula>IF(!ISBLANK(PureCloud_OrgID__c), &apos;PCL#&apos; + PureCloud_OrgID__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PureCloud OrgID Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureCloud_OrgID__c</fullName>
        <label>PureCloud OrgID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PureCloud_Status__c</fullName>
        <description>DL 11/11/19 Requested by Ben Averch
Field will be managed by Service Automation Delivery Team</description>
        <label>PureCloud Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureConnect_ID_Hash__c</fullName>
        <formula>IF(TEXT(Cloud_Platform__c) = &apos;PureConnect Cloud&apos; &amp;&amp; !ISBLANK(Billing_Platform_Id__c),
&apos;PCC#&apos; + Billing_Platform_Id__c,
IF(!ISBLANK(PureConnect_Id__c),
&apos;PCC#&apos; + PureConnect_Id__c, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PureConnect OrgID Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureConnect_Id__c</fullName>
        <label>PureConnect OrgID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used by subscription management to pull the deployment model</description>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Cloud Deployments</relationshipLabel>
        <relationshipName>Cloud_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <description>For CC Data Admin to capture notes related to &quot;CC Admin Review&quot; field updates.</description>
        <inlineHelpText>CC Data Admin - capture notes related to &quot;CC Admin Review&quot; field updates here</inlineHelpText>
        <label>Review Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ST_Access_Approval__c</fullName>
        <formula>Sold_To_Account__r.CC_Access_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ST Access Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Same as Account in case of direct relationship.</inlineHelpText>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Deployments (Sold To Account)</relationshipLabel>
        <relationshipName>Cloud_Deployments_ST</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_BOA__c</fullName>
        <label>Source BOA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Implementation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                    <default>true</default>
                    <label>Production</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_Enterprise_ID__c</fullName>
        <label>Super Enterprise ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Access_Records__c</fullName>
        <label>Support Access Records</label>
        <summaryFilterItems>
            <field>Support_Access_Cloud__c.Access_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Support_Access_Cloud__c.Cloud_Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Deployments (Support Owner)</relationshipLabel>
        <relationshipName>Cloud_Deployments_Support_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Status__c</fullName>
        <label>Support Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Billing Only</fullName>
                </value>
                <value>
                    <fullName>Order Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Integrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Integrator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Deployments (System Integration)</relationshipLabel>
        <relationshipName>Cloud_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAM_Active_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TAM Active Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAM_Engagement_Model__c</fullName>
        <label>TAM Engagement Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureSuccess</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Critical Account</fullName>
                </value>
                <value>
                    <fullName>CSM Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAM_Engagement_Start_Date__c</fullName>
        <label>TAM Engagement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TAM_Support_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Care TAM for this Cloud Deployment</description>
        <label>TAM Support Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cloud_Deployments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temporary_Conversion_Status__c</fullName>
        <label>Temporary - Conversion Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be deleted</fullName>
                </value>
                <value>
                    <fullName>Need Validation+PE Yellow</fullName>
                </value>
                <value>
                    <fullName>PE Yellow</fullName>
                </value>
                <value>
                    <fullName>Need Validation</fullName>
                </value>
                <value>
                    <fullName>Marked for removal</fullName>
                </value>
                <value>
                    <fullName>Record Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_ID__c</fullName>
        <label>PureEngage Tenant ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Term_Commitment__c</fullName>
        <label>TAM Engagement Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>Month to Month</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Phone_Numbers__c</fullName>
        <description>Tests phone numbers that the customer gave us so that we can make test calls to replicate issues the customer may report.</description>
        <inlineHelpText>Customer’s 800 numbers in order to make test calls.</inlineHelpText>
        <label>Test Phone Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Usage_Tracking__c</fullName>
        <formula>TEXT(Quote__r.Usage_Data_Submission_Method__c)</formula>
        <label>Usage Tracking</label>
        <type>Text</type>
    </fields>
    <label>Cloud Deployment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Support_Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Cloud_Platform__c</columns>
        <columns>Default__c</columns>
        <columns>Status__c</columns>
        <columns>Tenant_ID__c</columns>
        <columns>EP_Platform__c</columns>
        <columns>Order__c</columns>
        <columns>Billing_Platform_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Auto_created_not_on_Premier_or_OE_lists</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>Cloud_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>Support_Status__c</columns>
        <columns>Temporary_Conversion_Status__c</columns>
        <columns>CSM_Owner__c</columns>
        <columns>CXM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_BOA__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Support_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Temporary_Conversion_Status__c</field>
            <operation>equals</operation>
            <value>Need Validation,Marked for removal</value>
        </filters>
        <label>Auto-created, not on Premier or OE lists</label>
        <language>en_US</language>
    </listViews>
</CustomObject>